change to gradle